<resources>
    <string name="app_name">News App</string>
    <string name="politics">Politics</string>
    <string name="brexit">Working-class concerns ignored in Brexit debate | Letters</string>
    <string name="time">15:45:21</string>
    <string name="date">2018-06-22</string>
    <string name="no_more">No News available, please reload the app or check after some time.</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="author">Author</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    // list preference key and title
    <string name="orderby">Order By</string>
    <string name="orderkey" translatable="false">order_by</string>

    // labels of list preference
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="relevance">Relevance</string>

    //keys of list preference
    <string name="newest_value" translatable="false">newest</string>
    <string name="oldest_value" translatable="false">oldest</string>
    <string name="relevance_value" translatable="false">relevance</string>
    // title, default value and key of edit preference

    // Used in MainActivity.java
    <string name="search">Search</string>
    <string name="search_key">search</string>
    <string name="debates_default_value" translatable="false">debates</string>
    <string name="format">format</string>
    <string name="json">json</string>
    <string name="showtags">show-tags</string>
    <string name="contributor">contributor</string>
    <string name="orderbys">order-by</string>
    <string name="q">q</string>
    <string name="api">api-key</string>
    <string name="apikey">3570e947-baaf-4e5b-959c-f092011cde0c</string>


</resources>
