<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_160dp"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    apps:cardElevation="@dimen/_10dp">

    <TextView
        android:id="@+id/publication_Date"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_17dp"
        android:layout_above="@+id/heading"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:textSize="@dimen/_12sp"
        android:textStyle="bold"
        apps:layout_constraintBottom_toBottomOf="parent"
        apps:layout_constraintEnd_toEndOf="parent"
        apps:layout_constraintHorizontal_bias="0.025"
        apps:layout_constraintStart_toStartOf="parent"
        apps:layout_constraintTop_toTopOf="parent"
        apps:layout_constraintVertical_bias="0.0"
        tools:text="@string/time" />

    <TextView
        android:id="@+id/publication_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/publication_Date"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:padding="@dimen/_2dp"
        android:textSize="@dimen/_12sp"
        android:textStyle="bold"
        apps:layout_constraintBottom_toBottomOf="parent"
        apps:layout_constraintEnd_toEndOf="parent"
        apps:layout_constraintHorizontal_bias="0.026"
        apps:layout_constraintStart_toStartOf="parent"
        apps:layout_constraintTop_toTopOf="parent"
        apps:layout_constraintVertical_bias="0.137"
        tools:text="@string/date" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:padding="@dimen/_10dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_22sp"
        apps:layout_constraintBottom_toBottomOf="parent"
        apps:layout_constraintEnd_toEndOf="parent"
        apps:layout_constraintHorizontal_bias="0.038"
        apps:layout_constraintStart_toStartOf="parent"
        apps:layout_constraintTop_toTopOf="parent"
        tools:text="@string/brexit" />

    <TextView
        android:id="@+id/author_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:padding="@dimen/_5dp"
        android:textColor="@color/color_section"
        apps:layout_constraintBottom_toBottomOf="parent"
        apps:layout_constraintEnd_toEndOf="parent"
        apps:layout_constraintHorizontal_bias="0.025"
        apps:layout_constraintStart_toStartOf="parent"
        apps:layout_constraintTop_toTopOf="parent"
        apps:layout_constraintVertical_bias="1.0"
        tools:text="@string/author" />

    <TextView
        android:id="@+id/section_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:padding="@dimen/_5dp"
        android:textColor="@color/color_section"
        apps:layout_constraintBottom_toBottomOf="parent"
        apps:layout_constraintEnd_toEndOf="parent"
        apps:layout_constraintHorizontal_bias="1.0"
        apps:layout_constraintStart_toStartOf="parent"
        apps:layout_constraintTop_toTopOf="parent"
        apps:layout_constraintVertical_bias="1.0"
        tools:text="@string/politics" />

</android.support.constraint.ConstraintLayout>